# oss-pr-compass

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/oss_pr_compass/: __init__.py  analysis.py  cli.py  config.py  github.py  model.py
tests/: test_analysis.py  test_cli.py  test_config.py  test_github.py
